# types

./: CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  Readme.md
.github/: publish.yml  rust.yml
.github/workflows/: rust.yml
examples/: 2services.rs
src/: bool_type.rs  generic.rs  helper.rs  integer.rs  lib.rs  lock.rs  string.rs  traits.rs
src/redis/: barrier.rs  bool_type.rs  clock.rs  generic.rs  helper.rs  integer.rs  list.rs  lock.rs  mod.rs  mutex.rs  set_load.rs  string.rs
src/redis/rwlock/: constants.rs  error.rs  lock.rs  mod.rs  reader.rs  writer.rs
