[package]
name = "micro_types"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT"
license-file = "LICENSE.md"
description = "Types for distributed systems"
repository = "https://github.com/rust-micro/types"
homepage = "https://github.com/rust-micro/types"
keywords = ["micro", "distributed", "type", "redis"]
categories = ["microservice", "type", "database"]
documentation = "https://docs.rs/micro_types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "2services"
path = "examples/2services.rs"

[lib]
name = "dtypes"

[dependencies]
redis = { version = "0.23.3", features = ["script"] }
serde = { version = "1.0.188", features = [] }
serde_json = "1.0.106"
thiserror = "1.0.48"
uuid = { version = "1.4.1", features = ["v4"] }
