[package]
name = "micro_types"
version = "0.2.3"
edition = "2021"
readme = "README.md"
license-file = "LICENSE.md"
description = "Types for distributed systems"
repository = "https://github.com/rust-micro/types"
homepage = "https://github.com/rust-micro/types"
keywords = ["micro", "distributed", "type", "redis"]
categories = ["network-programming", "data-structures", "database"]
documentation = "https://docs.rs/micro_types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "2services"
path = "examples/2services.rs"

[lib]
name = "dtypes"

[features]
default = ["redis"]
redis = ["dep:redis", "dep:serde_json", "dep:serde"]

[dependencies]
redis = { version = "0.23.3", features = ["script"], optional = true }
serde = { version = "1.0.188", features = [], optional = true }
serde_json = { version = "1.0.106", optional = true }
thiserror = "1.0.48"
